--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend-react-project",
   "version": "1.0.0",
   "description": "Mini backend for course React od podstaw on Udemy",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production"
@@ -11,10 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
+    "babel": "^6.23.0",
     "bem-css-modules": "^1.4.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node": "^12.18.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -22,14 +24,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.2",
     "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.1.0",
